remove ununsed classes; add focus listener for red green and blue buttotns

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,11 +1,10 @@
 <idea-plugin>
     <id>org.example.tdd</id>
     <name>TDD - Red Green Refactor</name>
-    <vendor email="support@yourcompany.com" url="http://www.yourcompany.com">YourCompany</vendor>
+    <vendor email="gmi3024@gmail.com" url="http://www.yourcompany.com">Thoughtworks</vendor>
 
     <description><![CDATA[
-    Enter short description for your plugin here.<br>
-    <em>most HTML tags may be used</em>
+    Learn TDD.<br>
     ]]></description>
 
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
