--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,6 +14,7 @@
     <extensions defaultExtensionNs="com.intellij">
         <!-- Add your extensions here -->
         <toolWindow id="TDD" anchor="right" factoryClass="WindowFactory"/>
+        <testStatusListener implementation="FailureEventListener"/>
     </extensions>
 
     <actions>
