--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'org.learn.tdd'
-version '1.0.4'
+version '1.0.5'
 
 sourceCompatibility = 1.8
 
@@ -18,17 +18,17 @@ dependencies {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version '2020.2.3'
+    version '2021.1.3'
 }
 
 publishPlugin {
-    token 'TOKEN_PLUGIN'
-    channels 'beta'
+    token '***REMOVED***'
+    channels 'stable'
 }
 
 patchPluginXml {
     sinceBuild = '192'
-    changeNotes """
+    changeNotes = """
       Learn TDD.<br>
       <em>Red Green Refactor Cycle</em>"""
 }
